# fuzzycontrol

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
fuzzycontrol/aggregator/: __init__.py  base_agregator.py  summationer.py
fuzzycontrol/pipeline/: __init__.py  base_pipeline.py  basic_pipeline.py
fuzzycontrol/quantifier/: __init__.py  base_quantifier.py  one_hot_encoder.py
fuzzycontrol/risk_quantifier/: __init__.py  base_risk_quantifier.py  centroid_quantifier.py  ternary_quantifier.py  utils.py
fuzzycontrol/risk_quantifier/utils/: line.py  math.py
fuzzycontrol/rule/: __init__.py  base_rule.py  normalizer.py  percentage.py
tests/: test_quantifier.py  tests_playground.py
