[project]
name = "fuzzycontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.4",
    "scipy>=1.15.2",
]

[build-system]
    build-backend="hatchling.build"
    requires=["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["fuzzycontrol"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
]
